k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: django
          image: nexusameer/myportfolio
          ports:
            - containerPort: 8001
          volumeMounts:
            - name: media-storage
              mountPath: /app/media
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-pvc
