k8s/ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "*"
    http:
      paths:
      - path: /portfolio
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 80
